--- a/app.json
+++ b/app.json
@@ -70,7 +70,7 @@
 
       "description": "Your command handler. Default is ' . ' (dot).",
 
-      "value": "."
+      "value": ".",
 
     },
 
@@ -78,7 +78,7 @@
 
       "description": "A emoji to display in help command",
 
-      "value": "⊙"
+      "value": "⊙",
 
     },
 
@@ -86,7 +86,7 @@
 
       "description": "No.of buttons to display in help menu.",
 
-      "value": "7"
+      "value": "7",
 
     },
 
@@ -94,7 +94,7 @@
 
       "description": "Get this value from my.telegram.org",
 
-      "value": ""
+      "value": "",
 
     },
 
@@ -102,7 +102,7 @@
 
       "description": "Get this value from my.telegram.org",
 
-      "value": ""
+      "value": "",
 
     },
 
@@ -110,7 +110,7 @@
 
       "description": "Create a private channel. And get it's id from and paste here. Value should start with -100",
 
-      "value": ""
+      "value": "",
 
     },
 
@@ -118,7 +118,7 @@
 
       "description": "Get this value by using repl or termux. Refer to Repo for more info.",
 
-      "value": ""
+      "value": "",
 
     },
 
@@ -126,7 +126,7 @@
 
       "description": "Go to https://dashboard.heroku.com/account, scroll down and press Reveal API. Required for updater to work.",
 
-      "value": ""
+      "value": "",
 
     },
 
@@ -134,7 +134,7 @@
 
       "description": "The Value of App Name you filled in right on top. Required for updater to work.",
 
-      "value": ""
+      "value": "",
 
     },
 
@@ -142,7 +142,7 @@
 
       "description": "Make a bot from @BotFather and paste the bot token here.",
 
-      "value": ""
+      "value": "",
 
     },
 
@@ -150,7 +150,7 @@
 
       "description": "Make a bot from @BotFather and paste the username here.",
 
-      "value": ""
+      "value": "",
 
     },
 
@@ -172,9 +172,36 @@
 
     "options": {
 
-      "version": "12"
+      "version": "20"
 
     }
 
+  }],
+
+  "buildpacks": [{
+
+    "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
+
+  },{
+
+    "url":"https://github.com/heroku/heroku-buildpack-google-chrome"
+
+  },{
+
+    "url":"https://github.com/heroku/heroku-buildpack-chromedriver"
+
+  },{
+
+    "url": "https://github.com/opendoor-labs/heroku-buildpack-p7zip"
+
+  },{
+
+    "url": "https://github.com/heroku/heroku-buildpack-apt.git"
+
+  },{
+
+    "url": "heroku/python"
+
   }]
+
 }
