--- a/app.json
+++ b/app.json
@@ -1,94 +1,213 @@
 {
-  "name": "Userbot",
-  "description": "⊙A working bot⊙",
-  "logo": "",
+
+  "name": "USERBOT",
+
+  "description": "A working bot",
+
+  "logo": "https://telegra.ph/file/be1604a96cbb83bd170a7.jpg",
+
   "keywords": [
+
     "telegram",
+
     "userbot",
+
     "plugin",
+
     "telethon",
-    "hellbot",
+
+    "userbot",
+
     "modular",
+
     "productivity"
+
   ],
-  "repository": "https://github.com/AOSOFJ/USERBOT/",
+
+  "repository": "https://github.com/AOSOFJ/USERBOT",
+  "website": "https://github.com/AOSOFJ/USERBOT",
+  "success_url": "https://t.me/its_py",
+
   "env": {
+
     "ENV": {
+
       "description": "Setting this to ANYTHING will enable heroku.",
+
       "value": "ANYTHING"
+
     },
+
     "YOUR_NAME": {
-      "description": "Fill Your Telegram Name. Default Value is user. Required for reverting after clone.",
-      "value": "user",
+
+      "description": "Fill Your Telegram Name. Default Value is Hêll. Required for reverting after clone.",
+
+      "value": "Owner",
+
       "required": false
+
     },
+
     "PROFANITY": {
-      "description": "Leave it blank if you dont want Profanity in UserBot. Else Fill ON.",
+
+      "description": "Leave it blank if you dont want Profanity in HellBot. Else Fill ON.",
+
       "value": "ON",
+
       "required": false
+
     },
+
     "PM_LOG_ID": {
-      "description": "Fill your private Channel ID if you want to Log PM messages.",
+
+      "description": "Fill your private group ID if you want to Log PM messages",
+
       "value": "",
+
       "required": false
+
     },
+
     "HANDLER": {
+
       "description": "Your command handler. Default is ' . ' (dot).",
-      "value": "."
+
+      "value": ".",
+
     },
+
     "EMOJI_IN_HELP": {
+
       "description": "A emoji to display in help command",
-      "value": "⊙"
+
+      "value": "⊙",
+
     },
+
     "BUTTONS_IN_HELP": {
+
       "description": "No.of buttons to display in help menu.",
-      "value": "7"
+
+      "value": "7",
+
     },
+
     "APP_ID": {
+
       "description": "Get this value from my.telegram.org",
-      "value": ""
-    },
-    "API_HASH": {
-      "description": "Get this value from my.telegram.org",
-      "value": ""
-    },
-    "LOGGER_ID": {
-      "description": "Create a private channel. Value should start with -100",
-      "value": ""
-    },
-    "SESSION": {
-      "description": "Get this value by using repl or termux. Refer to Repo for more info.",
-      "value": ""
-    },
-    "HEROKU_API_KEY": {
-      "description": "Go to https://dashboard.heroku.com/account, scroll down and press Reveal API. Required for updater to work.",
-      "value": ""
-    },
-    "HEROKU_APP_NAME": {
-      "description": "The Value of App Name you filled in right on top. Required for updater to work.",
-      "value": ""
-    },
-    "BOT_TOKEN": {
-      "description": "Make a bot from @BotFather and paste the bot token here.",
-      "value": ""
-    },
-    "BOT_USERNAME": {
-      "description": "Make a bot from @BotFather and paste the username here.",
-      "value": ""
-    },
-    "SUDO_USERS": {
-      "description": "Userid of user to grant sudo access. Add multiple sudo users by giving a space between userids",
+
       "value": "",
+
+    },
+
+    "API_HASH": {
+
+      "description": "Get this value from my.telegram.org",
+
+      "value": "",
+
+    },
+
+    "LOGGER_ID": {
+
+      "description": "Create a private channel. And get it's id from and paste here. Value should start with -100",
+
+      "value": "",
+
+    },
+
+    "SESSION": {
+
+      "description": "Get this value by using repl or termux. Refer to Repo for more info.",
+
+      "value": "",
+
+    },
+
+    "HEROKU_API_KEY": {
+
+      "description": "Go to https://dashboard.heroku.com/account, scroll down and press Reveal API. Required for updater to work.",
+
+      "value": "",
+
+    },
+
+    "HEROKU_APP_NAME": {
+
+      "description": "The Value of App Name you filled in right on top. Required for updater to work.",
+
+      "value": "",
+
+    },
+
+    "BOT_TOKEN": {
+
+      "description": "Make a bot from @BotFather and paste the bot token here.",
+
+      "value": "",
+
+    },
+
+    "BOT_USERNAME": {
+
+      "description": "Make a bot from @BotFather and paste the username here.",
+
+      "value": "",
+
+    },
+
+    "SUDO_USERS": {
+
+      "description": "Userid of user to grant sudo access. Add multiple sudo users by giving a space between userids",
+
+      "value": "",
+
       "required": false
+
     }
+
   },
+
   "addons": [{
+
     "plan": "heroku-postgresql",
+
     "options": {
+
       "version": "12"
+
     }
+
   }],
+
   "buildpacks": [{
+
+    "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
+
+  },{
+
+    "url":"https://github.com/heroku/heroku-buildpack-google-chrome"
+
+  },{
+
+    "url":"https://github.com/heroku/heroku-buildpack-chromedriver"
+
+  },{
+
+    "url": "https://github.com/opendoor-labs/heroku-buildpack-p7zip"
+
+  },{
+
+    "url": "https://github.com/heroku/heroku-buildpack-apt.git"
+
+  },{
+  
+    "url": "https://github.com/chrismytton/heroku-buildpack-jq"
+    
+  },{
+
     "url": "heroku/python"
+
   }]
+
 }
