--- a/app.json
+++ b/app.json
@@ -181,5 +181,7 @@
   }],
   "buildpacks": [{
     "url": "heroku/python"
-  }]
+  },{
+    "url" : "https://buildpack-registry.s3.amazonaws.com/buildpacks/heroku/python.tgz"
+ }]
 }
